--- a/config/db.properties
+++ b/config/db.properties
@@ -1,11 +1,11 @@
 #云数据库认证
 accessKey=bTju4VYVR68bHEZZ
 secret=HNKUmuhAS5GagnWoXqVS4WKxL1zLjY
-guid=dts_rds32r958852g4lvpwgj_2YB
+guid=dts_rds32r958852g4lvpwgj_Ygt
 
 #同步本地目标数据库
 driverName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/wangdb
+url=jdbc:mysql://localhost:3306
 userName=root
 password=123456
 initialSize=5
