--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
 
-###设置日志消息每天输出到日志文件dts-log.log ###
+###设置INFO级别日志消息每天输出到日志文件dts-info.log ###
 log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.File = ../logs/dts-log.log
 log4j.appender.file.DatePattern = '_'yyyy-MM-dd'.log'
@@ -16,4 +16,11 @@ log4j.appender.file.Threshold = INFO
 log4j.appender.file.layout = org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} %5p %l - %m%n
 
-
+###设置ERROR级别日志消息每天输出到日志文件dts-error.log ###
+log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File = ../logs/dts-error.log
+log4j.appender.file.DatePattern = '_'yyyy-MM-dd'.log'
+log4j.appender.file.Append = true
+log4j.appender.file.Threshold = ERROR
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} %5p %l - %m%n
